# modern_cpp_memory_mgmt

./: README.md
examples/: a.out  memory_leak.cpp  pointers.cpp  strategy_pattern_pointers.cpp
homework_8/: CMakeLists.txt  lenna_test.pgm
homework_8/data/: test.ppm
homework_8/include/: IoStrategy.hpp  homework_8.h  image_class.hpp  io_tools.hpp
homework_8/task_1/src/: task_1.cpp
homework_8/task_2/src/: IoStrategy.cpp  image_class.cpp  io_tools.cpp  task_2.cpp
